# animation_generator

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml
back/: .dockerignore  .gitignore  README.md  pyproject.toml
back/app/: .env.example  main.py
back/app/model/: job.py  mode.mmd  model.py
back/app/router/: animation.py  job.py
back/app/service/: README.md  agent.py  base_agent.py  fast_ai_agent.py  graph_agent.py  job_manager.py  template_service.py
back/app/service/prompt/: prompts.toml  regacy_prompt.toml
back/app/service/prompt/en/: fast_ai_prompts.toml  prompts.toml
back/app/service/prompt/ja/: fast_ai_prompts.toml  prompts.toml
back/app/tools/: diff_patcher.py  fomatter.py  lint.py  manim_lint.py  manim_linter.py  secure.py
back/app/tools/embeding_data/: build_vector_db.py  embedding_data.py  query_manim_docs.py
back/app/tools/embeding_data/manim_chroma_db/ff0cc654-b1ca-46b7-a68c-ab97ac959b4f/: index_metadata.pickle
back/app/tools/template_data/: template_rag_store.py
back/app/tools/template_data/template_code_with_video/: code1.py  code2.py  code3.py  code4.py  code5.py  code6.py  template_summary_cache.json
back/docs/: JOB_API.md
docs/: API_GUIDE.md
