[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.1",
    "dotenv>=0.9.9",
    "fastapi>=0.118.2",
    "google-cloud-aiplatform>=1.124.0",
    "json-repair>=0.52.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.21",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-google-vertexai>=3.0.1",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=0.3.35",
    "langdetect>=1.0.9",
    "langgraph>=0.6.8",
    "langserve>=0.3.2",
    "loguru>=0.7.3",
    "manim==0.19.0",
    "markdown-it-py>=4.0.0",
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "psycopg>=3.2.12",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.0",
    "pyright>=1.1.406",
    "ruff>=0.14.0",
    "sentence-transformers>=2.7.0",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.43",
    "torch==2.9.0+cpu",
    "transformers>=4.57.1",
    "uvicorn>=0.37.0",
    "sse-starlette>=2.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = ["E501", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
